# simple_world_creator

./: CMakeLists.txt  package.xml
include/simple_world_creator/: simple_world_creator.h
src/: main.cpp  simple_world_creator.cpp
worlds/: example_world  peter_experiment  peter_experiment.bt  peter_experiment.ot  peter_experiment.world  peter_experiment_real  peter_experiment_real.bt  peter_experiment_real.ot  peter_experiment_real_2  peter_experiment_real_floor  peter_experiment_real_floor.bt  peter_experiment_real_floor.ot  peter_experiment_real_video  peter_experiment_real_video.bt  peter_experiment_real_video.ot  peter_experiment_real_video.world
