<?xml version="1.0"?>
<package>
  <name>simple_world_creator</name>
  <version>0.0.0</version>
  <description>The simple_world_creator package</description>
  <maintainer email="philkark@todo.todo">philkark</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>

  <export>
  </export>
</package>
